FIX problema con el https handsontable

--- a/source/frontend/index.html
+++ b/source/frontend/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <script src="https://www.google.com/recaptcha/api.js?onload=vcRecaptchaApiLoaded&render=explicit&hl=es" async defer></script>
-    <script src="http://docs.handsontable.com/pro/1.5.0/bower_components/numbro/dist/numbro.js"></script>
+    <script src="https://docs.handsontable.com/pro/1.5.0/bower_components/numbro/dist/numbro.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.14.1/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/pikaday.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/zeroclipboard/2.2.0/ZeroClipboard.min.js"></script>
