--- a/source/frontend/src/home/form-project.html
+++ b/source/frontend/src/home/form-project.html
@@ -1,22 +1,10 @@
-<li id="projectFormID">
+<li id="projectFormID" ng-init="formCtrl.showDetailsTab() ? indextab = 1 : indextab = 0">
 <div class="contentNewProyect">{{formCtrl.title}}</div>
-<uib-tabset active="activeFormProyect" >
+<uib-tabset active="indextab">
+
   <uib-tab index="0" heading="Información inicial" ng-if="formCtrl.showInformacionInicial()">
     <div class="col-md-12 contentFormProyect" id="alertmodalcomponent">
        <div class="col-md-3 col-sm-12 col-xs-12 pull-right contentAction" id="moveprojectid">
-            <!-- <div class="dropdown content-actionForm">
-                <button disabled class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                    <i class="glyphicon glyphicon-transfer" aria-hidden="true"></i>
-                    <span>Cambiar estado</span>
-                    <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                    <li><a href="#">Varificar</a></li>
-                    <li><a href="#">Pre aprobar</a></li>
-                    <li><a href="#">Cancelar</a></li>
-                    <li><a href="#">Rechazar</a></li>
-                </ul>
-            </div> -->
             <div class="contentProgress content-actionForm">
             <div class="formProgressTitle">Información inicial</div>
                 <div class="titleProgress">Progreso de creación</div>
@@ -268,7 +256,7 @@ Si el proyecto no tiene una ubicación definida aún o no impacta en ningún lug
                         <div class="form-group col-md-8 col-sm-12" ng-if="formCtrl.currentProject.tipoUbicacionGeografica == 'Dirección'">
                             <label for="direccion">Dirección</label>
                             <!-- <input type="text" class="form-control" id="direccion" maxlength="512" placeholder="Ingresar dirección" ng-model="formCtrl.currentProject.direccion"> -->
-                            <usigautocomplete model="formCtrl.currentProject.direccion"></usigautocomplete>
+                            <usigautocomplete></usigautocomplete>
                         </div>
                         <div class="form-group col-md-8 col-sm-12" ng-if="formCtrl.currentProject.tipoUbicacionGeografica == 'Comunas'">
                             <label for="comunas">Comunas</label>
@@ -389,7 +377,7 @@ Si el proyecto no tiene una ubicación definida aún o no impacta en ningún lug
                         </div> -->
                         <div class="col-md-12">
                             <input type="file" id="inputFile" multiple>
-                            <button id="buttonFile" type="button" class="btn btn-default">
+                            <button id="buttonFile" type="button" class="btn btn-default" ng-click="formCtrl.uploadFile()">
                               <div class="icNew" title="Agregar"></div>
                               <span>Agregar nuevo archivo</span>
                             </button>
@@ -411,33 +399,11 @@ Si el proyecto no tiene una ubicación definida aún o no impacta en ningún lug
         <alertmodal modal-id="budgetAlert" modal-title="Aviso" modal-body="Vas a perder la información ingresada en los presupuestos. ¿Desea Continuar?" on-accept="formCtrl.continueChangeBudget(formCtrl.currentProject.fechaInicio, formCtrl.currentProject.fechaFin)" on-cancel="formCtrl.cancelDateUpdate()"></alertmodal>
     </div>
   </div>
+
   </uib-tab>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   <uib-tab index="1" heading="Información detallada" ng-if="formCtrl.showDetailsTab()">
+
     <div class="col-md-12 contentFormProyect" id="alertmodalcomponent">
        <div class="col-md-3 col-sm-12 col-xs-12 pull-right contentAction" id="obraprojectid">
             <div class="contentProgress content-actionForm">
@@ -470,8 +436,8 @@ Si el proyecto no tiene una ubicación definida aún o no impacta en ningún lug
             </div>
 
             <div class="dropdown content-actionForm contentButtonRight">
-              <button type="button" ng-click="formCtrl.saveDataDetailPresent()" class="btn btn-success btn-lg fullButtonRight">Guardar y Presentar</button>
-              <button type="button" ng-click="formCtrl.saveDataDetailDraft()" form="principalForm" class="btn btn-default fullButtonRight" id="draftButton fullButtonRight">Guardar Borrador</button>
+              <button type="button" ng-click="formCtrl.saveDataDetailPresent()" class="btn btn-success btn-lg fullButtonRight">{{formCtrl.savePresentTxt}}</button>
+              <button type="button" ng-click="formCtrl.saveDataDetailDraft()" form="principalForm" class="btn btn-default fullButtonRight" ng-if = "formCtrl.currentProject.estado === 'D. Completo' || formCtrl.currentProject.estado === 'D. Incompleto' || formCtrl.currentProject.estado === 'Pre Aprobado'" id="draftButton fullButtonRight">Guardar Borrador</button>
               <button type="button" class="btn btn-default fullButtonRight"  data-toggle="modal" data-target="#cancelAlertDetail">Cancelar cambios</button>
             </div>
 
@@ -485,12 +451,7 @@ Si el proyecto no tiene una ubicación definida aún o no impacta en ningún lug
                     <div class="row">
                     <div class="col-md-12">
                         <div class="table-responsive gridContent">
-                          <div class="obrasList">
-                            <div class="itemObra" ng-repeat="obra in formCtrl.currentProject.obras" data-toggle="modal" data-target="#obraModal" ng-click="formCtrl.editObra(obra)">
-                              <span>{{obra.nombre}}</span>
-                            </div>
-                          </div>
-                          <table class="table tableContentForm">
+                          <table class="table tableContentForm" ng-if="(formCtrl.currentProject.hitos && formCtrl.currentProject.hitos.length > 0) || (formCtrl.currentProject.obras && formCtrl.currentProject.obras.length > 0)" ng-init="formCtrl.initializePickers()">
                             <thead>
                               <tr>
                                 <th>Hito</th>
@@ -500,9 +461,11 @@ Si el proyecto no tiene una ubicación definida aún o no impacta en ningún lug
                                 <th></th>
                               </tr>
                             </thead>
-                            <tbody>
-                              <tr ng-if="formCtrl.currentProject.hitos && formCtrl.currentProject.hitos.length > 0" ng-repeat="hito in formCtrl.currentProject.hitos track by $index">
-                                <td><input type="text" class="form-control" id="name" maxlength="512" required="" ng-model="hito.nombre"></td>
+                            <tbody ng-repeat="hito in formCtrl.currentProject.hitos track by $index">
+                              <tr>
+                                <td ng-init="hitoindex = $index">
+                                  <input type="text" class="form-control" id="name" maxlength="512" required="" ng-model="hito.nombre">
+                                </td>
                                 <td>
                                   <div class="input-group">
                                     <input type="text" class="form-control" uib-datepicker-popup="dd/MM/yyyy" is-open="formCtrl.datePickersInicio[$index].status" close-text="Cerrar" current-text="Fecha Actual" clear-text="Limpiar" ng-model="hito.fechaInicio" required/>
@@ -527,9 +490,96 @@ Si el proyecto no tiene una ubicación definida aún o no impacta en ningún lug
                                   <ul class="dropdown-menu" aria-labelledby="dropdownAction">
                                     <!-- <li><a href="">Agrupar con...</a></li>
                                     <li><a href="">Dependiente de...</a></li> -->
-                                    <li><a ng-click="formCtrl.removeHito($index)">Eliminar</a></li>
+
+                                    <li><a ng-click="formCtrl.subHito($index)">Agregar subhito</a></li>
+                                    <li><a class="actionHito" ng-click="formCtrl.removeHito($index)">Eliminar</a></li>
+
                                   </ul>
                                 </div>
+                                </td>
+                              </tr>
+                              <tr ng-repeat="hijo in hito.hitosHijos track by $index" class="hito-{{hitoindex}}">
+                                <td><input type="text" class="form-control" style="width: 90% !important; float: right;" id="name" maxlength="512" required="" ng-model="hijo.nombre"></td>
+                                <td>
+                                  <div class="input-group">
+                                    <input type="text" class="form-control" uib-datepicker-popup="dd/MM/yyyy" is-open="formCtrl.datePickersHijosInicio[$index].status" close-text="Cerrar" current-text="Fecha Actual" clear-text="Limpiar" ng-model="hijo.fechaInicio" required/>
+                                    <span class="input-group-btn">
+                                        <button type="button" class="btn btn-default" ng-click="formCtrl.handlePickerHijoInicio($index)"><i class="glyphicon glyphicon-calendar"></i></button>
+                                    </span>
+                                  </div>
+                                </td>
+                                <td>
+                                  <div class="input-group">
+                                    <input type="text" class="form-control" uib-datepicker-popup="dd/MM/yyyy" is-open="formCtrl.datePickersHijosFin[$index].status"  close-text="Cerrar" current-text="Fecha Actual" clear-text="Limpiar" ng-model="hijo.fechaFin" required/>
+                                    <span class="input-group-btn">
+                                        <button type="button" class="btn btn-default" ng-click="formCtrl.handlePickerHijoFin($index)"><i class="glyphicon glyphicon-calendar"></i></button>
+                                    </span>
+                                  </div>
+                                </td>
+                                <td>
+                                  <div class="dropdown">
+                                  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownAction" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                    <i class="glyphicon glyphicon-cog" aria-hidden="true"></i>
+                                  </button>
+                                  <ul class="dropdown-menu" aria-labelledby="dropdownAction">
+                                    <!-- <li><a href="">Agrupar con...</a></li>
+                                    <li><a href="">Dependiente de...</a></li> -->
+                                    <li><a ng-click="formCtrl.removeSubHito($index, hitoindex)">Eliminar</a></li>
+                                  </ul>
+                                </div>
+                                </td>
+                              </tr>
+                            </tbody>
+                            <tbody ng-repeat="obra in formCtrl.currentProject.obras track by $index">
+                              <tr data-toggle="collapse">
+                                <td>
+                                  <span class="thirdLabel columnRight">
+                                      <span class="nameObj" data-toggle="collapse" data-target=".obra-{{$index}}" ng-init="obraindex = $index">{{obra.nombre}}</span>
+                                      <span class="icEdit" aria-hidden="true" title="Editar" data-toggle="modal" data-target="#obraModal" ng-click="formCtrl.editObra(obra)"></span>
+                                  </span>
+                                </td>
+                                <td>
+                                  <div class="input-group">
+                                    {{obra.fechaInicio | date:'MM/dd/yyyy'}}
+                                  </div>
+                                </td>
+                                <td>
+                                  <div class="input-group">
+                                    {{obra.fechaFin | date:'MM/dd/yyyy'}}
+                                  </div>
+                                </td>
+                                <td>
+                                  <div class="dropdown">
+                                  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownAction" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                    <i class="glyphicon glyphicon-cog" aria-hidden="true"></i>
+                                  </button>
+                                  <ul class="dropdown-menu" aria-labelledby="dropdownAction">
+                                    <!-- <li><a href="">Agrupar con...</a></li>
+                                    <li><a href="">Dependiente de...</a></li> -->
+                                    <li><a class="actionHito" ng-click="formCtrl.removeObra($index)">Eliminar</a></li>
+
+                                  </ul>
+                                </div>
+                                </td>
+                              </tr>
+                              <tr ng-repeat="hito in obra.hitos track by $index" class="collapse in obra-{{obraindex}}">
+                                <td>
+                                  <div class="obraHitoTitle">
+                                    {{hito.nombre}}
+                                  </div>
+                                </td>
+                                <td>
+                                  <div class="input-group">
+                                    {{hito.fechaInicio | date:'MM/dd/yyyy'}}
+                                  </div>
+                                </td>
+                                <td>
+                                  <div class="input-group">
+                                    {{hito.fechaFin | date:'MM/dd/yyyy'}}
+                                  </div>
+                                </td>
+                                <td>
+
                                 </td>
                               </tr>
                             </tbody>
@@ -554,28 +604,39 @@ Si el proyecto no tiene una ubicación definida aún o no impacta en ningún lug
                     <p class="reference">Podés copiar y pegar muchos desde Excel en un solo paso. </p>
                     <p class="reference">Si seleccionás en Excel varias celdas que estén una debajo de la otra, las copias y pegás sobre cualquier de los siguientes casilleros, se distribuirán a partir  de ese casillero hacia abajo. </p>
                     <div class="row">
-                    <div class="typeTableContainer col-md-6 col-sm-12 col-xs-12">
+
+                    <div class="typeTableContainer col-lg-6 col-md-12 col-sm-12 col-xs-12">
                     <label for="direccion">TIPO DE GASTO (TOTAL DEL PROYECTO)</label>
                       <div class="titleTable"></div>
-                      <hot-table col-headers="true" row-headers="true" datarows="formCtrl.type" column-summary="formCtrl.columnSummary" hot-id="type">
-                        <hot-column width="250" read-only></hot-column>
-                        <hot-column width="100"></hot-column>
+                      <hot-table col-headers="true" row-headers="true" datarows="formCtrl.type" hot-id="type">
+                        <hot-column width="150" read-only></hot-column>
+                        <hot-column width="100" type="'numeric'" format="'$ 0,0.00'"></hot-column>
                       </hot-table>
+
+                      <!-- <hot-table
+                        settings="formCtrl.settings"
+                        row-headers="formCtrl.rowHeaders"
+                        col-headers="formCtrl.colHeaders"
+                        datarows="formCtrl.type"
+                        column-summary="formCtrl.columnSummary"
+                        >
+                      </hot-table> -->
                     </div>
 
-                    <div class="typeTableContainer col-md-6 col-sm-12 col-xs-12">
+                    <div class="typeTableContainer col-lg-6 col-md-12 col-sm-12 col-xs-12">
                     <label for="direccion">CURVA DE INVERSIÓN</label>
                       <div class="titleTable"></div>
                       <hot-table col-headers="true" row-headers="true" datarows="formCtrl.curve" column-summary="formCtrl.columnSummary" hot-id="curve">
                         <hot-column width="150" read-only></hot-column>
-                        <hot-column width="100"></hot-column>
+                        <hot-column width="100" type="'numeric'" format="'$ 0,0.00'"></hot-column>
                       </hot-table>
                     </div>
+
                     </div>
                 </div>
             <br>
-            <button type="button" ng-click="formCtrl.saveDataDetailPresent()" class="btn btn-success btn-lg">Guardar y Presentar</button>
-            <button type="button" ng-click="formCtrl.saveDataDetailDraft()" class="btn btn-default" id="draftButton">Guardar Borrador</button>
+            <button type="button" ng-click="formCtrl.saveDataDetailPresent()" class="btn btn-success btn-lg">{{formCtrl.savePresentTxt}}</button>
+            <button type="button" ng-click="formCtrl.saveDataDetailDraft()" ng-if = "formCtrl.currentProject.estado === 'D. Completo' || formCtrl.currentProject.estado === 'D. Incompleto' || formCtrl.currentProject.estado === 'Pre Aprobado'" class="btn btn-default" id="draftButton">Guardar Borrador</button>
             <button  type="button" class="btn btn-default right" data-toggle="modal" data-target="#cancelAlertDetail">Cancelar cambios</button>
         </form>
 
@@ -583,7 +644,7 @@ Si el proyecto no tiene una ubicación definida aún o no impacta en ningún lug
     </div>
   </div>
 
-
   </uib-tab>
+
 </uib-tabset>
 </li>
