--- a/source/frontend/src/home/home-tree.html
+++ b/source/frontend/src/home/home-tree.html
@@ -94,9 +94,11 @@
                                             <span id="op-{{objO.idObjetivoOperativo}}">
                                                 <div class="row content-obj">
                                                     <div class="col-md-12 col-sm-12">
-                                                            <span class="nameObj" data-toggle="collapse" href="#grupo-level-2-{{objO.idObjetivoOperativo}}">{{ objO.nombre }}
+                                                          <div class="contentObjOp">
+                                                            <div class="nameObj" data-toggle="collapse" href="#grupo-level-2-{{objO.idObjetivoOperativo}}">{{ objO.nombre }}
                                                              <span class="icEdit absoluteContent" aria-hidden="true" title="Editar" data-toggle="tooltip" ng-click="homeCtrl.editOperativeObjective(objO.idObjetivoOperativo)" data-placement="top" title="" data-original-title="Editar"></span>
-                                                             </span>
+                                                             </div>
+                                                          </div>
                                                              <i class="img-chevron-down collapsed verticalCenter" aria-hidden="true" data-toggle="collapse" href="#grupo-level-2-{{objO.idObjetivoOperativo}}"></i>
                                                     </div>
                                                 </div>
@@ -143,7 +145,7 @@
                                                               <span class="titleMobile">Fin: </span>
                                                               <span class="date left">{{proyecto.fechaFin| date:'MM/dd/yyyy'}}</span>
                                                               <span class="titleMobile estado">Estado: </span>
-                                                              <span class="estateClass" ng-class="{'completoClass' : proyecto.estado === 'Completo' || proyecto.estado === 'Completo', 'incompletoClass' : proyecto.estado === 'Incompleto' || proyecto.estado === 'D. Incompleto', 'presentadoClass' : proyecto.estado === 'Presentado' || proyecto.estado === 'D. Presentado', 'verificadoClass' : proyecto.estado === 'Verificado', 'canceladoClass' : proyecto.estado === 'Cancelado', 'preAprobadoClass' : proyecto.estado === 'Pre Aprobado', 'aprobadoClass' : proyecto.estado === 'Aprobado', 'aplazadoClass' : proyecto.estado === 'Demorado', 'rechazadoClass' : proyecto.estado === 'Rechazado' || proyecto.estado === 'D. Rechazado', 'enPriorizacionClass' : proyecto.estado === 'En PriorizaciÃ³n'}">{{proyecto.estado}}</span>
+                                                              <span class="estateClass" ng-class="{'completoClass' : proyecto.estado === 'Completo' || proyecto.estado === 'D. Modificable', 'incompletoClass' : proyecto.estado === 'Incompleto' || proyecto.estado === 'D. Incompleto', 'presentadoClass' : proyecto.estado === 'Presentado' || proyecto.estado === 'D. Presentado', 'verificadoClass' : proyecto.estado === 'Verificado', 'canceladoClass' : proyecto.estado === 'Cancelado', 'preAprobadoClass' : proyecto.estado === 'Pre Aprobado', 'aprobadoClass' : proyecto.estado === 'Aprobado', 'aplazadoClass' : proyecto.estado === 'Demorado', 'rechazadoClass' : proyecto.estado === 'Rechazado' || proyecto.estado === 'D. Rechazado', 'enPriorizacionClass' : proyecto.estado === 'En Priorización'}">{{proyecto.estado}}</span>
                                                               <!-- <i class="img-chevron-down collapsed verticalCenter" aria-hidden="true" data-toggle="collapse" href="#grupo-level-{{objO.idObjetivoOperativo}}-{{$index}}"></i> -->
                                                           </div>
                                                           <div class="col-md-12 col-sm-12 col-xs-12 notPadding" id="proyecto-{{proyecto.idProyecto}}">
